<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="PluralsCandidate">
    <string name="launch_name">Clash</string>
    <string name="application_name">Clash for Android</string>

    <string name="stopped">Stopped</string>
    <string name="tap_to_start">Tap to start</string>
    <string name="running">Running</string>
    <string name="format_traffic_forwarded">%s Forwarded</string>

    <string name="proxy">Proxy</string>
    <string name="direct_mode">Direct Mode</string>
    <string name="rule_mode">Rule Mode</string>
    <string name="global_mode">Global Mode</string>

    <string name="profiles">Profiles</string>
    <string name="not_selected">Not selected</string>
    <string name="format_profile_activated">%s Activated</string>

    <string name="logs">Logs</string>
    <string name="settings">Settings</string>
    <string name="support">Support</string>
    <string name="about">About</string>

    <string name="unknown">Unknown</string>

    <string name="recently">Recently</string>

    <string name="format_minutes">%d minutes</string>
    <string name="format_hours">%d hours</string>
    <string name="format_days">%d days</string>
    <string name="format_months">%d months</string>
    <string name="format_years">%d years</string>

    <string name="create_profile">Create Profile</string>
    <string name="file">File</string>
    <string name="import_from_file">Import from File</string>
    <string name="url">URL</string>
    <string name="import_from_url">Import from URL</string>
    <string name="external">External</string>

    <string name="application_broken">Application Broken</string>

    <string name="profile">Profile</string>
    <string name="name">Name</string>
    <string name="profile_name">Profile Name</string>
    <string name="profile_url">Profile URL</string>

    <string name="auto_update">Auto Update (Minutes)</string>
    <string name="more_than_15_minutes">More than 15 minutes</string>
    <string name="invalid_interval">Invalid Interval</string>
    <string name="download_failure">Download Failure</string>
    <string name="detail">Detail</string>
    <string name="update">Update</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="export">Export</string>
    <string name="properties">Properties</string>
    <string name="duplicate">Duplicate</string>
    <string name="reset_provider">Reset Providers</string>

    <string name="exit_without_save">Exit without Save</string>
    <string name="exit_without_save_warning">All changed will *LOST*</string>

    <string name="disabled">Disabled</string>
    <string name="empty_name">Empty Name</string>
    <string name="invalid_url">Invalid URL</string>
    <string name="processing">Processing</string>
    <string name="loading">Loading</string>

    <string name="new_profile">New Profile</string>
    <string name="clone_profile">Clone Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="clash_start_failure">Clash Start Failure</string>
    <string name="refresh">Refresh</string>

    <string name="delay">Delay</string>
    <string name="direct">Direct</string>
    <string name="global">Global</string>
    <string name="rule">Rule</string>
    <string name="mode">Mode</string>
    <string name="sort_group">Sort Group</string>
    <string name="sort_proxy">Sort Proxy</string>
    <string name="default_">Default</string>
    <string name="utils">Utils</string>
    <string name="merge_prefix">Merge Prefix</string>

    <string name="start_url_provider_failure">Start URL Provider Failure</string>

    <string name="clash_new_profile">New Profile</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="clash_logcat">Clash Logcat</string>
    <string name="history">History</string>
    <string name="log_viewer">Log Viewer</string>
    <string name="format_export_log_name">%s.log</string>

    <string name="delete_all_logs">Delete All Logs</string>
    <string name="delete_all_logs_warn">All historical logs will *LOST*</string>
    <string name="delete_log">Delete Log</string>
    <string name="delete_log_warn">%s will be deleted</string>
    <string name="open_log_failure">Open Log File Failure</string>
    <string name="file_exported">File Exported</string>

    <string name="behavior">Behavior</string>
    <string name="network">Network</string>
    <string name="interface_">Interface</string>

    <string name="restart">Restart</string>
    <string name="auto_restart">Auto Restart</string>
    <string name="allow_clash_auto_restart">Allow clash auto restart</string>

    <string name="notification">Notification</string>
    <string name="show_traffic">Show Traffic</string>
    <string name="show_traffic_summary">Auto refresh traffic in notification</string>

    <string name="route_system_traffic">Route System Traffic</string>
    <string name="routing_via_vpn_service">Auto routing all system traffic via VpnService</string>
    
    <string name="vpn_service">VPN Service</string>
    <string name="bypass_private_network">Bypass Private Network</string>
    <string name="bypass_private_network_summary">Bypass private network addresses</string>
    <string name="dns_hijacking">DNS Hijacking</string>
    <string name="dns_hijacking_summary">Handle all dns packet</string>
    <string name="dns_override">DNS Config Override</string>
    <string name="dns_override_summary">Force use builtin DNS config</string>
    <string name="append_system_dns">Append System DNS</string>
    <string name="append_system_dns_summary">Auto add system dns to clash</string>
    <string name="access_control_mode">Access Control Mode</string>
    <string name="access_control_packages">Access Control Packages</string>
    <string name="access_control_packages_summary">Configure access permission for apps</string>

    <string name="language">Language</string>
    <string name="dark_mode">Dark Mode</string>

    <string name="options_unavailable">Options Unavailable until Clash Stopped</string>

    <string name="system_apps">System Apps</string>
    <string name="sort">Sort</string>
    <string name="package_name">Package Name</string>
    <string name="update_time">Update Time</string>
    <string name="install_time">Install Time</string>
    <string name="reverse">Reverse</string>
    <string name="search">Search</string>

    <string name="sources">Sources</string>
    <string name="clash">Clash</string>
    <string name="clash_for_android">Clash for Android</string>
    <string name="clash_url" translatable="false">https://github.com/Dreamacro/clash</string>
    <string name="clash_for_android_url" translatable="false">https://github.com/Kr328/ClashForAndroid</string>

    <string name="feedback">Feedback</string>
    <string name="donate">Donate</string>
    <string name="github_issues">Github Issues</string>
    <string name="telegram_channel">Telegram Channel</string>
    <string name="github_issues_url" translatable="false">https://github.com/Kr328/ClashForAndroid/issues</string>
    <string name="telegram_channel_url" translatable="false">https://t.me/clash_for_android_channel</string>
    
    <string name="tips_profile"><![CDATA[Accept Only <strong>Clash Config</strong> which contains <br /><strong>Proxies, Proxy Groups and Rules</strong>]]></string>
    <string name="tips_support"><![CDATA[Clash for Android is <strong>free</strong> and <strong>open source</strong> <br /> It does <strong>NOT</strong> provide any proxy services]]></string>

    <string name="application_broken_description"><![CDATA[This is usually because you used a copy from <strong>Google Play</strong>, but the app that generated the copy did not handle <strong>Split Apks</strong> correctly <br />This means you get <strong>part of the app</strong>, not all of it]]></string>
    <string name="learn_more_about_split_apks">Learn more about Split Apks</string>
    <string name="reinstall_from_google_play">Reinstall from Google Play</string>
    <string name="download_from_github_releases">Download from Github Releases</string>

    <string name="about_split_apks_url" translatable="false">https://developer.android.com/platform/technology/app-bundle</string>
    <string name="google_play_url" translatable="false">https://play.google.com/store/apps/details?id=com.github.kr328.clash</string>
    <string name="github_releases_url" translatable="false">https://github.com/Kr328/ClashForAndroid/releases</string>

    <string name="format_proxy_group_title" translatable="false">%s - %s</string>
    <string name="missing_vpn_component">Missing VPN Components</string>

    <string name="profile_not_found">Profile not found</string>

    <string name="upload_logcat">Upload Logcat</string>
    <string name="upload_logcat_summary">Upload logcat to help us detect issues</string>
    <string name="upload_logcat_warn">Please note that the uploaded logs may contain personally sensitive information, do you still want to continue?</string>
    <string name="uploaded">Uploaded</string>
</resources>
