<?xml version="1.0" encoding="utf-8"?>
<!--suppress ALL -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <SwitchPreference
        android:key="enable_vpn_service"
        android:title="@string/route_system_traffic"
        android:summary="@string/routing_via_vpn_service"
        android:defaultValue="true" />
    <PreferenceCategory android:title="@string/vpn_service" android:dependency="enable_vpn_service">
        <SwitchPreference
            android:key="bypass_private_network"
            android:title="@string/bypass_private_network"
            android:summary="@string/bypass_private_network_summary"
            android:defaultValue="true" />
        <SwitchPreference
            android:key="dns_hijacking"
            android:title="@string/dns_hijacking"
            android:summary="@string/dns_hijacking_summary"
            android:defaultValue="true"/>
        <SwitchPreference
            android:key="dns_override"
            android:title="@string/dns_override"
            android:summary="@string/dns_override_summary"
            android:defaultValue="true" />
        <SwitchPreference
            android:key="append_system_dns"
            android:title="@string/append_system_dns"
            android:summary="@string/append_system_dns_summary"
            android:defaultValue="true"/>
        <SimpleMenuPreference
            android:key="access_control_mode"
            android:title="@string/access_control_mode"
            android:summary="%s"
            android:entries="@array/access_control_mode_display"
            android:entryValues="@array/access_control_mode_value"
            android:defaultValue="access_control_mode_all" />
        <Preference
            android:key="access_control_packages"
            android:title="@string/access_control_packages"
            android:summary="@string/access_control_packages_summary">
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>
