<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always"/>
    <item android:title="@string/sort">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/sortName"
                    android:title="@string/name"
                    android:checked="true" />
                <item
                    android:id="@+id/sortPackageName"
                    android:title="@string/package_name" />
                <item
                    android:id="@+id/sortUpdateTime"
                    android:title="@string/update_time" />
                <item
                    android:id="@+id/sortInstallTime"
                    android:title="@string/install_time" />
            </group>
            <item
                android:id="@+id/sortReverse"
                android:title="@string/reverse"
                android:checkable="true" />
        </menu>
    </item>
    <item
        android:id="@+id/systemApps"
        android:title="@string/system_apps"
        android:checkable="true"
        android:checked="true" />
</menu>