<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:scrollbars="none"
    android:id="@+id/activity_main_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:animateLayoutChanges="true"
        tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:gravity="center_vertical">
            <View
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="36dp"
                android:contentDescription="@string/application_name"
                android:background="@drawable/ic_logo" />
            <TextView
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textSize="20sp"
                android:text="@string/launch_name"
                android:textColor="@color/clashIconColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"/>
        </LinearLayout>

        <com.github.kr328.clash.design.view.ColorfulTextCard
            android:id="@+id/status"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:theme="@style/AppTheme.ThemeOverlay.ForceDarkSurface"
            app:cardElevation="4dp"
            app:cardCornerRadius="8dp"
            app:cardBackgroundColor="@color/primaryCardColor"
            app:icon="@drawable/ic_stopped"
            app:title="@string/stopped"
            app:summary="@string/tap_to_start"/>

        <com.github.kr328.clash.design.view.TextCard
            android:id="@+id/proxies"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            app:cardElevation="4dp"
            app:cardCornerRadius="8dp"
            app:cardBackgroundColor="?attr/colorSurface"
            app:icon="@drawable/ic_proxies"
            app:title="@string/proxy"
            app:summary="@string/direct_mode"/>

        <com.github.kr328.clash.design.view.TextCard
            android:id="@+id/profiles"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            app:cardElevation="4dp"
            app:cardCornerRadius="8dp"
            app:cardBackgroundColor="?attr/colorSurface"
            app:icon="@drawable/ic_profiles"
            app:title="@string/profiles"
            app:summary="@string/not_selected"/>

        <LinearLayout
            android:id="@+id/logs"
            android:padding="15dp"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:focusable="true"
            android:clickable="true"
            android:orientation="horizontal">

            <ImageView
                android:contentDescription="@string/logs"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/ic_logs" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:text="@string/logs" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/settings"
            android:padding="15dp"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:focusable="true"
            android:clickable="true"
            android:orientation="horizontal">

            <ImageView
                android:contentDescription="@string/settings"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/ic_settings" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:text="@string/settings" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/feedback"
            android:padding="15dp"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:focusable="true"
            android:clickable="true"
            android:orientation="horizontal">

            <ImageView
                android:contentDescription="@string/feedback"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/ic_feedback" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:text="@string/feedback" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/about"
            android:padding="15dp"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:focusable="true"
            android:clickable="true"
            android:orientation="horizontal">

            <ImageView
                android:contentDescription="@string/about"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/ic_about" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:text="@string/about" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
